--- a/portofolio.html
+++ b/portofolio.html
@@ -4,8 +4,29 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="style.css">
 </head>
+<header>
+    <nav>
+        <div class="right">
+            <img src="flower.png" alt="" height="100px">
+        </div>
+        <div class="left">
+            <h4>ME</h4>
+            <h4>Education</h4>
+            <h4>Organization</h4>
+        </div>
+    </nav>
+    <div class="nama">
+        <h1>YOLANDA</h1>
+        <h1>OKTAKHANIA PUTRI</h1>
+        <h3>Computer Science Student // Frontend // UI-UX Enthusiast</h3>
+    </div>
+ 
+</header>
 <body>
-    hallo
+    <div class="education">
+        
+    </div>
 </body>
 </html>
