--- a/portofolio.html
+++ b/portofolio.html
@@ -5,6 +5,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <link rel="stylesheet" href="style.css">
+    <link href="https://fonts.googleapis.com/css2?family=Bangers&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Great+Vibes&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Cookie&display=swap" rel="stylesheet">
 </head>
 <header>
     <nav>
@@ -20,13 +23,13 @@
     <div class="nama">
         <h1>YOLANDA</h1>
         <h1>OKTAKHANIA PUTRI</h1>
-        <h3>Computer Science Student // Frontend // UI-UX Enthusiast</h3>
+        <h3>Computer Science Student // Frontend // U1-UX Enthusiast</h3>
     </div>
  
 </header>
 <body>
     <div class="education">
-        
+
     </div>
 </body>
 </html>
