--- a/portofolio.html
+++ b/portofolio.html
@@ -5,9 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <link rel="stylesheet" href="style.css">
-    <link href="https://fonts.googleapis.com/css2?family=Bangers&display=swap" rel="stylesheet">
-    <link href="https://fonts.googleapis.com/css2?family=Great+Vibes&display=swap" rel="stylesheet">
-    <link href="https://fonts.googleapis.com/css2?family=Cookie&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Archivo+Black&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css" />
 </head>
 <header>
     <nav>
@@ -20,16 +19,25 @@
             <h4>Organization</h4>
         </div>
     </nav>
-    <div class="nama">
-        <h1>YOLANDA</h1>
-        <h1>OKTAKHANIA PUTRI</h1>
-        <h3>Computer Science Student // Frontend // U1-UX Enthusiast</h3>
-    </div>
- 
 </header>
 <body>
-    <div class="education">
-
+<div class="page1">
+    <div class="nama">
+        <h1>HELLO</h1>
+        <h2>I'm Yolanda</h2>
+        <h3>_________Computer Science Student // Frontend // UI-UX Enthusiast</h3>
     </div>
+    <div class="socmed">
+        <i class="fa fa-facebook"></i>
+        <i class="fa fa-instagram"></i>
+        <i class="fa fa-twitter"></i>
+        <i class="fa fa-envelope"></i>
+    </div>
+    <div class="nomor">
+        <div class="satu">01</div>
+        <div class="tex">____</div>
+        <div class="text">INTRODUCE</div>
+    </div>
+</div>
 </body>
 </html>
