--- a/portofolio.html
+++ b/portofolio.html
@@ -8,6 +8,94 @@
     <link href="https://fonts.googleapis.com/css2?family=Archivo+Black&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css" />
 </head>
+
+<style>
+
+header{
+    background-image: url(header.png);
+    color: whitesmoke;
+    height: 5em;    
+}
+
+nav{
+    position: fixed;
+    display: flex;
+    width: 100%;
+    justify-content: space-between;
+}
+.left{
+    display: flex;
+    width: 40%;
+    justify-content: space-evenly;
+}
+.page1{
+    color: whitesmoke;
+    background-image: url(header.png);
+    background-size: cover;
+}
+.text1{
+    margin-top: 0;
+    padding-top: 1em;
+    font-size: 6vw;
+    font-family: 'Archivo Black', sans-serif;
+    letter-spacing: 3px;
+}
+h2{
+    margin-top: -30px;
+    font-size: 5vw;
+    font-family: 'Archivo Black', sans-serif;
+    letter-spacing: 3px;
+}
+h3{
+    margin-top: -30px;
+    font-size: 1vw;
+    letter-spacing: 1px;
+}
+
+.nama{
+    margin-left: 18em;
+    padding-bottom: 20em;
+}
+.socmed{
+    position: fixed;
+    top: 40%;
+    left: 3%;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    height: 10em;
+}
+.satu{
+    position: absolute;
+    right: 5%;
+    top: 30%;
+    color: gold;
+    font-size: 2vw;
+    font-family: 'Archivo Black', sans-serif;
+}
+.tex{
+    position: absolute;
+    right: 4.6%;
+    top: 37%;
+    color: white;
+    font-family: 'Archivo Black', sans-serif;
+    writing-mode: tb-rl;
+}
+.text{
+    position: absolute;
+    right: 5%;
+    top: 43%;
+    color:grey;
+    font-family: 'Archivo Black', sans-serif;
+    writing-mode: tb-rl;
+    letter-spacing: 4px;
+}
+.socmed.i{
+   color: blue;
+}
+
+</style>
+
 <header>
     <nav>
         <div class="right">
@@ -28,6 +116,7 @@
         <h3>_________Computer Science Student // Frontend // UI-UX Enthusiast</h3>
     </div>
     <div class="socmed">
+        <button>jj</button>
         <i class="fa fa-facebook"></i>
         <i class="fa fa-instagram"></i>
         <i class="fa fa-twitter"></i>
@@ -38,6 +127,8 @@
         <div class="tex">____</div>
         <div class="text">INTRODUCE</div>
     </div>
+    <button>GET MY CV</button>
+    <i class="fa fa-envelope"></i>
 </div>
 </body>
 </html>
